objects/Project_Task__c.object
<CustomObject>
    <label>Project Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Task</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Asignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asignee</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Project Task (Asigne)</relationshipLabel>
        <relationshipName>Project_Task1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From which project, Task is related.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Task</relationshipLabel>
        <relationshipName>Project_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>select Employees whom are assigned to task.</description>
        <label>Assign To</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Project Task</relationshipLabel>
        <relationshipName>Project_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Write brief notes related to the task.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Check_Task_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Task End Date  Should be Greater or Equal to the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Task_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The Task start  date must be greater or equal to Today&apos;s Date</errorMessage>
    </validationRules>
</CustomObject>